--- a/Agents/VapourtecScheduleAgent/Dockerfile
+++ b/Agents/VapourtecScheduleAgent/Dockerfile
@@ -26,7 +26,7 @@ RUN python -m pip install -r requirements.txt
 
 # Set the default working directory, then copy the Python source code into it
 WORKDIR /app
-ADD vtexeagent /app/vtexeagent
+ADD vapourtecscheduleagent /app/vapourtecscheduleagent
 
 # Switch to a non-root user before running the server, for security reasons
 # (See https://code.visualstudio.com/docs/containers/python-user-rights)
@@ -40,4 +40,4 @@ RUN chmod -R 755 /home/appuser
 # Start the gunicorn server on port 5000, using a Flask object called 'app' imported from the 'python_agent' module
 # Note that port 5000 is *inside the container*; this can be mapped to a port on the host when running the container on the command line or in docker-compose.yml
 USER appuser
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "vtexeagent:create_app()"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "vapourtecscheduleagent:create_app()"]
