dev-1285-upgrade-from-java-8: Updated modified projects to use jps-base-lib v.1.17.0 and updated minor version number of each project

--- a/JPS_FILE_EDITOR/pom.xml
+++ b/JPS_FILE_EDITOR/pom.xml
@@ -12,7 +12,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.16.0-java11-SNAPSHOT</version>
+			<version>1.17.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
