--- a/core/ogm/pom.xml
+++ b/core/ogm/pom.xml
@@ -9,7 +9,7 @@
     <artifactId>ogm</artifactId>
     <name>ogm</name>
 
-    <version>1.1.1</version>
+    <version>1.17.0</version>
 
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -167,8 +167,8 @@
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
-            <artifactId>jena-core</artifactId>
-            <version>3.16.0</version>
+            <artifactId>jena-jdbc-core</artifactId>
+            <version>4.5.0</version>
         </dependency>
     </dependencies>
 
