--- a/JPS_FILE_EDITOR/pom.xml
+++ b/JPS_FILE_EDITOR/pom.xml
@@ -36,5 +36,6 @@
 	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
+		<maven.compiler.release>8</maven.compiler.release>
 	</properties>
 </project>
