dev-psdt: Gateway nginx configuration now serves static files, including the necessary CORS headers.

--- a/Deploy/stacks/psdt/gateway/nginx.conf
+++ b/Deploy/stacks/psdt/gateway/nginx.conf
@@ -34,9 +34,17 @@ http {
         listen       54321;
         listen  [::]:54321;
         server_name  localhost;
-        location / {
-            add_header 'Access-Control-Allow-Origin' '*' always;
 
+        add_header 'Access-Control-Allow-Origin' '*' always;
+
+        location /static/ {
+            root /var/www/html;
+            # An auto-generated index is useful for debugging, so one can browse the
+            # statically hosted files in a web-browser. Comment out for production.
+            autoindex on;
+        }
+
+        location / {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Headers' 'DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
