160-dev-rxn-opt-goal-agent: [DoEAgent] updated pyderivationagent/chemistry_and_robots/summit version number to their newest release; updated python version to 3.8 and java version to 11 in the Dockerfile; updated extra_hosts from localhost to host.docker.internal for doe_agent in docker-compose.test.yml; added --preload flag to doe_agent entrypoint in docker-compose.test.yml to enable more information from flask to help debug. All tests passed.

--- a/Agents/DoEAgent/docker-compose.test.yml
+++ b/Agents/DoEAgent/docker-compose.test.yml
@@ -12,9 +12,10 @@ services:
     ports:
       - 7000:5000
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
     env_file:
       - ./doeagent/tests/agent.doe.env.test
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "doeagent:create_app()", "--preload"]
 
   # Blazegraph
   blazegraph:
