--- a/Agents/DoEAgent/requirements.txt
+++ b/Agents/DoEAgent/requirements.txt
@@ -1,14 +1,14 @@
 #######################################
 ## The World Avatar related packages ##
 #######################################
-pyderivationagent==1.2.0
+pyderivationagent==1.2.1
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-chemistry_and_robots==1.1.0
+chemistry_and_robots==1.1.2
 
 ##########################
 ## Third-party packages ##
 ##########################
-summit
+summit==0.8.7
 pandas==1.3.5
 pydantic==1.9.0
 testcontainers==3.4.2
