--- a/Agents/HPLCAgent/docker-compose.test.yml
+++ b/Agents/HPLCAgent/docker-compose.test.yml
@@ -9,19 +9,17 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-      labels:
-        authors: "jb2197@cam.ac.uk"
-        description: "Monitor the local report folder of the configured HPLC and upload the new reports to knowledge graph."
     ports:
       - 7000:5000
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
     env_file:
       - ./hplcagent/tests/agent.hplc.env.test
     volumes:
       - type: bind
         source: ./hplcagent/tests/_for_docker_integration_test
         target: /app/CHEM32
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "hplcagent:create_app()", "--preload"]
 
   # Blazegraph
   blazegraph:
