160-dev-rxn-opt-goal-agent: [HPLCPostProAgent] updated pyderivationagent/chemistry_and_robots version number to their newest release; updated python version to 3.8 and java version to 11 in the Dockerfile; updated extra_hosts from localhost to host.docker.internal for hplc_postpro_agent in docker-compose.test.yml; added --preload flag to hplc_postpro_agent entrypoint in docker-compose.test.yml to enable more information from flask to help debug. All tests passed.

--- a/Agents/HPLCPostProAgent/docker-compose.test.yml
+++ b/Agents/HPLCPostProAgent/docker-compose.test.yml
@@ -19,9 +19,10 @@ services:
     # network_mode: host
     # Use extra_hosts instead
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
     env_file:
       - ./hplcpostproagent/tests/agent.hplc.postpro.env.test
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "hplcpostproagent:create_app()", "--preload"]
 
   # Blazegraph
   blazegraph:
