160-dev-rxn-opt-goal-agent: [VapourtecAgent] updated pyderivationagent/chemistry_and_robots version number to their newest release; updated python version to 3.8 and java version to 11 in the Dockerfile; updated extra_hosts from localhost to host.docker.internal for vapourtec_agent in docker-compose.test.yml; added --preload flag to vapourtec_agent entrypoint in docker-compose.test.yml to enable more information from flask to help debug. All tests passed.

--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -9,8 +9,8 @@ services:
       dockerfile: ./Dockerfile
     ports:
       - 7000:5000
-    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
-      - localhost:host-gateway
+    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "host.docker.internal"
+      - host.docker.internal:host-gateway
     env_file:
       - ./vapourtecagent/tests/agent.vapourtec.env.test
     volumes:
@@ -19,6 +19,7 @@ services:
       - type: bind
         source: ./vapourtecagent/tests/_for_docker_integration_test
         target: /app/vapourtec
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "vapourtecagent:create_app()", "--preload"]
 
   # Blazegraph
   blazegraph:
