--- a/Agents/VapourtecScheduleAgent/.gitignore
+++ b/Agents/VapourtecScheduleAgent/.gitignore
@@ -15,3 +15,8 @@ dist/
 # Miscellaneous files/folders:
 .pytest_cache
 *.env
+
+# FlowCommander related files
+FCRemote.dll
+FCRemoteCSV.dll
+*.fcexp
