--- a/Agents/VapourtecScheduleAgent/docker-compose.test.yml
+++ b/Agents/VapourtecScheduleAgent/docker-compose.test.yml
@@ -9,15 +9,51 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-      labels:
-        authors: "jb2197@cam.ac.uk"
-        description: "Schedule and request execution of reaction experiment given the suggested conditions."
     ports:
       - 7000:5000
     extra_hosts:
-      - localhost:host-gateway
+      - host.docker.internal:host-gateway
     env_file:
       - ./vapourtecscheduleagent/tests/env_files/agent.vapourtec.schedule.env.test
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "vapourtecscheduleagent:create_app()", "--preload"]
+
+  # VapourtecAgent for three-agent integration test
+  vapourtec_agent:
+    image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
+    container_name: vapourtec_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+    ports:
+      - 7001:5000
+    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
+      - localhost:host-gateway
+    env_file:
+      - ./vapourtecscheduleagent/tests/env_files/agent.vapourtec.env.test
+    volumes:
+      - ./FCRemote.dll:/app/FCRemote.dll
+      - ./FCRemoteCSV.dll:/app/FCRemoteCSV.dll
+      - type: bind
+        source: ./vapourtecscheduleagent/tests/_for_docker_integration_test_vapourtec
+        target: /app/vapourtec
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "vapourtecagent:create_app()", "--preload"]
+
+  # HPLCAgent for three-agent integration test
+  hplc_agent:
+    image: ghcr.io/cambridge-cares/hplc_agent:1.0.0-SNAPSHOT
+    container_name: hplc_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+    ports:
+      - 7002:5000
+    extra_hosts:
+      - localhost:host-gateway
+    env_file:
+      - ./vapourtecscheduleagent/tests/env_files/agent.hplc.env.test
+    volumes:
+      - type: bind
+        source: ./vapourtecscheduleagent/tests/_for_docker_integration_test_hplc
+        target: /app/CHEM32
+    entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "hplcagent:create_app()", "--preload"]
 
   # Blazegraph
   blazegraph:
@@ -40,40 +76,6 @@ services:
     # Add secret to set BASIC authentication password
     secrets:
       - file_server_password
-
-  # VapourtecAgent for three-agent integration test
-  vapourtec_agent:
-    image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
-    container_name: vapourtec_agent
-    environment:
-      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
-    ports:
-      - 7001:5000
-    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
-      - localhost:host-gateway
-    env_file:
-      - ./vapourtecscheduleagent/tests/env_files/agent.vapourtec.env.test
-    volumes:
-      - type: bind
-        source: ./vapourtecscheduleagent/tests/_for_docker_integration_test_vapourtec
-        target: /app/vapourtec
-
-  # HPLCAgent for three-agent integration test
-  hplc_agent:
-    image: ghcr.io/cambridge-cares/hplc_agent:1.0.0-SNAPSHOT
-    container_name: hplc_agent
-    environment:
-      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
-    ports:
-      - 7002:5000
-    extra_hosts:
-      - localhost:host-gateway
-    env_file:
-      - ./vapourtecscheduleagent/tests/env_files/agent.hplc.env.test
-    volumes:
-      - type: bind
-        source: ./vapourtecscheduleagent/tests/_for_docker_integration_test_hplc
-        target: /app/CHEM32
 
 # Secrets used to set runtime passwords
 secrets:
