160-dev-rxn-opt-goal-agent: [RxnOptGoalIterAgent] updated pyderivationagent/chemistry_and_robots version number to their newest release; updated python version to 3.8 and java version to 11 in the Dockerfile; updated extra_hosts from localhost to host.docker.internal for rxn_opt_goal_iter_agent in docker-compose.test.yml; added --preload flag to rxn_opt_goal_iter_agent entrypoint in docker-compose.test.yml to enable more information from flask to help debug. All tests passed.

--- a/Agents/RxnOptGoalIterAgent/Dockerfile
+++ b/Agents/RxnOptGoalIterAgent/Dockerfile
@@ -1,14 +1,15 @@
 # This Dockerfile has been adapted from the VS Code example at https://code.visualstudio.com/docs/containers/quickstart-python
 
 # Base image is a lightweight version of Python
-FROM python:3.7-slim-buster
+FROM python:3.8-slim-buster
 
-# Install required software
-RUN apt update && apt install -y git
+# Meta data
+LABEL authors = "jb2197@cam.ac.uk"
+LABEL description = "One iteration for goal-based reaction optimisation."
 
-# Install Java openjdk-11 to enable py4jps
+# Install required software: git and openjdk-11
 USER root
-RUN apt update && apt install -y openjdk-11-jdk-headless
+RUN apt update && apt install -y git openjdk-11-jdk-headless
 
 # Expose the port on which our server will run
 EXPOSE 5000
