--- a/Agents/DoEAgent/docker-compose.test.yml
+++ b/Agents/DoEAgent/docker-compose.test.yml
@@ -6,6 +6,7 @@ services:
     container_name: doe_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+      EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -15,6 +16,8 @@ services:
       - host.docker.internal:host-gateway
     env_file:
       - ./doeagent/tests/agent.doe.env.test
+    secrets:
+      - email_auth
     entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "doeagent:create_app()", "--preload"]
 
   # Blazegraph
@@ -33,3 +36,5 @@ services:
 secrets:
   blazegraph_password:
     file: doeagent/tests/dummy_services_secrets/blazegraph_passwd.txt
+  email_auth:
+    file: doeagent/tests/dummy_services_secrets/email_auth.json
