--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -4,6 +4,9 @@ services:
   vapourtecagent:
     image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
     container_name: vapourtec_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+      EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -19,6 +22,8 @@ services:
       - type: bind
         source: ./vapourtecagent/tests/_for_docker_integration_test
         target: /app/vapourtec
+    secrets:
+      - email_auth
     entrypoint: ["gunicorn", "--bind", "0.0.0.0:5000", "vapourtecagent:create_app()", "--preload"]
 
   # Blazegraph
@@ -49,3 +54,5 @@ secrets:
     file: ./vapourtecagent/tests/dummy_services_secrets/blazegraph_passwd.txt
   file_server_password:
     file: ./vapourtecagent/tests/dummy_services_secrets/fileserver_passwd.txt
+  email_auth:
+    file: vapourtecagent/tests/dummy_services_secrets/email_auth.json
