dev: updated handshake mechanisms to avoid CORS problem with CLAUDIUS
used SPARQLWrapper instead of direct http request to make handshake with endpoints in CLAUDIUS

--- a/.gitignore
+++ b/.gitignore
@@ -120,3 +120,4 @@ JPS_MARIE_AND_BERT/Dataset
 MARIE_AND_BERT/Data
 MARIE_AND_BERT/archived
 MARIE_AND_BERT/**/*.log
+MARIE_AND_BERT/Training/ScoringFunction/playground/entity_list
