160-dev-rxn-opt-goal-agent: [HPLCAgent] added dry run mode to HPLCAgent, in which a raw report will be uploaded to fileserver.

--- a/Agents/HPLCAgent/agent.hplc.env.example
+++ b/Agents/HPLCAgent/agent.hplc.env.example
@@ -18,3 +18,5 @@ CURRENT_HPLC_METHOD=http://example.com/blazegraph/namespace/testlab/dummy_lab/HP
 HPLC_REPORT_FILE_EXTENSION=xls
 
 HPLC_REPORT_HOST_DIR=./folder
+
+DRY_RUN=true
