dev-dtvf-3.1.0: Updated code to better handle default visibility states of layers in Cesium implementation.

--- a/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
@@ -3,8 +3,7 @@
         "center": [60, 37],
         "zoom": 2,
         "bearing": 0,
-        "pitch": 45,
-        "style": "mapbox://styles/mapbox/light-v10?optimize=true"
+        "pitch": 45
     },
     "search": {
         "Name": "name",
