--- a/Agents/HMLandRegistryAgent/.vscode/launch.json
+++ b/Agents/HMLandRegistryAgent/.vscode/launch.json
@@ -13,8 +13,8 @@
             "preLaunchTask": "compose-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/epcdata",
-                    "remoteRoot": "/app/epcdata"
+                    "localRoot": "${workspaceFolder}/landregistry",
+                    "remoteRoot": "/app/landregistry"
                 }
             ]
         },
@@ -27,8 +27,8 @@
             "preLaunchTask": "compose-build-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/epcdata",
-                    "remoteRoot": "/app/epcdata"
+                    "localRoot": "${workspaceFolder}/landregistry",
+                    "remoteRoot": "/app/landregistry"
                 }
             ]
         },
@@ -41,8 +41,8 @@
             "preLaunchTask": "update-compose-build-deploy",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/epcdata",
-                    "remoteRoot": "/app/epcdata"
+                    "localRoot": "${workspaceFolder}/landregistry",
+                    "remoteRoot": "/app/landregistry"
                 }
             ]
         },
@@ -54,8 +54,8 @@
             "port": "${input:debug.port.read}",
             "pathMappings": [
                 {
-                    "localRoot": "${workspaceFolder}/epcdata",
-                    "remoteRoot": "/app/epcdata"
+                    "localRoot": "${workspaceFolder}/landregistry",
+                    "remoteRoot": "/app/landregistry"
                 }
             ]
         }
