272-ability-to-upload-triples-through-the-stack-data-uploader: Updated the dynamic stack docker setup so that the tests get run during the build process. The issue with doing this earlier was that it wasn't possible to mount the required Docker API socket during the build process. This has been solved by building and running a separate test image.

--- a/Deploy/stacks/dynamic/stack-data-uploader/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-data-uploader/Dockerfile
@@ -29,6 +29,10 @@ ARG CACHEBUST=1
 
 RUN mvn package --update-snapshots
 
+FROM builder as test
+
+CMD ["mvn", "test"]
+
 #==================================================================================================
 
 # Second stage: copy the output into a clean image
