--- a/JPS_ACCESS_AGENT/docker-build/docker-compose.yml
+++ b/JPS_ACCESS_AGENT/docker-build/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   access-agent:
-    image: ghcr.io/cambridge-cares/access-agent:1.5.0-SNAPSHOT
+    image: ghcr.io/cambridge-cares/access-agent:1.5.0
     build:
         context: "../"
         dockerfile: "./docker-build/Dockerfile"
