160-dev-rxn-opt-goal-agent: [VapourtecScheduleAgent] modified schedule agent to use MAX_THREAD_MONITOR_ASYNC_DERIVATIONS to decide the maximum number of concurrent experiment; updated integration tests accordingly.

--- a/Agents/VapourtecScheduleAgent/agent.vapourtec.schedule.env.example
+++ b/Agents/VapourtecScheduleAgent/agent.vapourtec.schedule.env.example
@@ -11,4 +11,8 @@ FILE_SERVER_PASSWORD=
 ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/VapourtecSchedule
 REGISTER_AGENT=false
 
-MAXIMUM_CONCURRENT_EXPERIMENT=1
+MAX_THREAD_MONITOR_ASYNC_DERIVATIONS=1
+EMAIL_RECIPIENT=
+EMAIL_SUBJECT_PREFIX=VapourtecScheduleAgent
+EMAIL_USERNAME=
+EMAIL_START_END_ASYNC_DERIVATIONS=true
