--- a/Deploy/stacks/dynamic/stack-data-uploader/pom.xml
+++ b/Deploy/stacks/dynamic/stack-data-uploader/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.cmclinnovations</groupId>
   <artifactId>stack-data-uploader</artifactId>
-  <version>1.5.1</version>
+  <version>1.5.2-376-error-thrown-when-trying-to-query-raster-data-in-the-stack-SNAPSHOT</version>
 
   <name>Stack Data Uploader</name>
   <url>https://www.cmclinnovations.com</url>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>com.cmclinnovations</groupId>
       <artifactId>stack-clients</artifactId>
-      <version>1.5.1</version>
+      <version>1.5.2-376-error-thrown-when-trying-to-query-raster-data-in-the-stack-SNAPSHOT</version>
     </dependency>
 
     <dependency>
