--- a/Agents/RxnOptGoalAgent/docker-compose.yml
+++ b/Agents/RxnOptGoalAgent/docker-compose.yml
@@ -1,49 +1,54 @@
 version: "3.8"
 
 services:
-  rxn_opt_goal_agent:
-    image: ghcr.io/cambridge-cares/rxn_opt_goal_agent:1.0.0-SNAPSHOT
-    container_name: rxn_opt_goal_agent
-    environment:
-      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
-    build:
-      context: .
-      dockerfile: ./Dockerfile
-      labels:
-        authors: "jb2197@cam.ac.uk"
-        description: "Request for goal-based reaction optimisation."
+  # rxn_opt_goal_agent:
+  #   image: ghcr.io/cambridge-cares/rxn_opt_goal_agent:1.0.0-SNAPSHOT
+  #   container_name: rxn_opt_goal_agent
+  #   environment:
+  #     LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+  #     EMAIL_AUTH_JSON_PATH: /run/secrets/email_auth
+  #   build:
+  #     context: .
+  #     dockerfile: ./Dockerfile
+  #     labels:
+  #       authors: "jb2197@cam.ac.uk"
+  #       description: "Request for goal-based reaction optimisation."
+  #   ports:
+  #     - 7070:5000
+  #   env_file:
+  #     - ./tests/env_files/agent.goal.env.test
+  #   secrets:
+  #     - email_auth
+  #   extra_hosts:
+  #     - localhost:host-gateway
+
+  # Blazegraph
+  blazegraph:
+    image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
+    container_name: "blazegraph_test"
     ports:
-      - 7070:5000
-    env_file:
-      - ./tests/env_files/agent.goal.env.test
-    extra_hosts:
-      - localhost:host-gateway
+      - 48082:8080
+    environment:
+      BLAZEGRAPH_PASSWORD_FILE: /run/secrets/blazegraph_password
+    # Add a secret to set the password for BASIC authentication
+    secrets:
+      - blazegraph_password
 
-#   # Blazegraph
-#   blazegraph:
-#     image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
-#     container_name: "blazegraph_test"
-#     ports:
-#       - 48082:8080
-#     environment:
-#       BLAZEGRAPH_PASSWORD_FILE: /run/secrets/blazegraph_password
-#     # Add a secret to set the password for BASIC authentication
-#     secrets:
-#       - blazegraph_password
+  # File server
+  fileserver:
+    image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
+    container_name: "fileserver_test"
+    ports:
+      - 48086:8080
+    # Add secret to set BASIC authentication password
+    secrets:
+      - file_server_password
 
-#   # File server
-#   fileserver:
-#     image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
-#     container_name: "fileserver_test"
-#     ports:
-#       - 48086:8080
-#     # Add secret to set BASIC authentication password
-#     secrets:
-#       - file_server_password
-
-# # Secrets used to set runtime passwords
-# secrets:
-#   blazegraph_password:
-#     file: ./tests/dummy_services_secrets/blazegraph_passwd.txt
-#   file_server_password:
-#     file: ./tests/dummy_services_secrets/fileserver_passwd.txt
+# Secrets used to set runtime passwords
+secrets:
+  blazegraph_password:
+    file: ./tests/dummy_services_secrets/blazegraph_passwd.txt
+  file_server_password:
+    file: ./tests/dummy_services_secrets/fileserver_passwd.txt
+  email_auth:
+    file: ./tests/dummy_services_secrets/email_auth.json
