--- a/Agents/RxnOptGoalAgent/requirements.txt
+++ b/Agents/RxnOptGoalAgent/requirements.txt
@@ -1,13 +1,14 @@
 #######################################
 ## The World Avatar related packages ##
 #######################################
-pyderivationagent==1.2.0
+pyderivationagent==1.2.2
 git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
-chemistry_and_robots==1.1.0
+chemistry_and_robots==1.1.2
 
 ##########################
 ## Third-party packages ##
 ##########################
+yagmail==0.15.293
 pandas==1.3.5
 pydantic==1.9.0
 xlwt==1.3.0
