--- a/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-clients/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   stack-client:
-    image: docker.cmclinnovations.com/stack-client:1.5.2-376-error-thrown-when-trying-to-query-raster-data-in-the-stack-SNAPSHOT
+    image: docker.cmclinnovations.com/stack-client:1.5.2
     configs:
       - postgis
       - geoserver
