--- a/Deploy/stacks/dynamic/stack-clients/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-clients/Dockerfile
@@ -19,7 +19,7 @@ WORKDIR /root/code
 COPY pom.xml ./pom.xml
 
 # Retrieve all of the dependencies 
-RUN mvn clean dependency:resolve
+RUN --mount=type=cache,id=stack-mvn,target=/root/.m2/repository,sharing=locked mvn clean dependency:resolve
 
 # Copy in the code
 COPY src ./src/
@@ -27,7 +27,7 @@ COPY src ./src/
 # Ensure that the latest versions of SNAPSHOT dependencies are always used
 ARG CACHEBUST=1
 
-RUN mvn deploy --update-snapshots -DskipTests
+RUN --mount=type=cache,id=stack-mvn,target=/root/.m2/repository,sharing=locked mvn deploy --update-snapshots -DskipTests
 
 #==================================================================================================
 
