272-ability-to-upload-triples-through-the-stack-data-uploader: Fixed issue caused by the contents of the .m2/repository directory being stored in a build cache volume rather than the image when running the (intergration) tests for the stack projects.

--- a/Deploy/stacks/dynamic/stack-clients/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-clients/Dockerfile
@@ -31,6 +31,8 @@ RUN --mount=type=cache,id=stack-mvn,target=/root/.m2/repository,sharing=locked m
 
 FROM builder as test
 
+RUN --mount=type=cache,id=stack-mvn,target=/root/.m2/repository2,sharing=locked cp -r /root/.m2/repository2/* /root/.m2/repository
+
 CMD ["mvn", "test"]
 
 FROM builder as deploy
