--- a/Deploy/stacks/psdt/vis-cesium/settings.json
+++ b/Deploy/stacks/psdt/vis-cesium/settings.json
@@ -4,5 +4,13 @@
         "heading": 0,
         "pitch": -40,
         "roll": 0.0
+    },
+    "imagery": {
+	"Light": "https://api.mapbox.com/styles/v1/mapbox/light-v10/tiles/256/{z}/{x}/{y}?access_token=",
+	"Dark": "https://api.mapbox.com/styles/v1/mapbox/dark-v10/tiles/256/{z}/{x}/{y}?access_token=",
+	"Outdoors": "https://api.mapbox.com/styles/v1/mapbox/outdoors-v11/tiles/256/{z}/{x}/{y}?access_token=",
+	"Satellite (Raw)": "https://api.mapbox.com/styles/v1/mapbox/satellite-v9/tiles/256/{z}/{x}/{y}?access_token=",
+	"Satellite (Labelled)": "https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/tiles/256/{z}/{x}/{y}?access_token=",
+	"default": "Dark"
     }
 }
