--- a/Agents/AverageSquareMetrePriceAgent/agent.env.example
+++ b/Agents/AverageSquareMetrePriceAgent/agent.env.example
@@ -1,12 +1,12 @@
-ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__HPLC_PostPro/Service
-DERIVATION_PERIODIC_TIMESCALE=120
-DERIVATION_INSTANCE_BASE_URL=http://www.theworldavatar.com/triplestore/repository/
-SPARQL_QUERY_ENDPOINT=http://localhost:48082/blazegraph/namespace/kb/sparql
-SPARQL_UPDATE_ENDPOINT=http://localhost:48082/blazegraph/namespace/kb/sparql
-KG_USERNAME=
-KG_PASSWORD=
-FILE_SERVER_ENDPOINT=http://localhost:48086/FileServer/
-FILE_SERVER_USERNAME=
-FILE_SERVER_PASSWORD=
-ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/PostPro
+ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__KL_AvgSqmPrice/Service
+ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/AvgSqmPrice
 REGISTER_AGENT=false
+DERIVATION_PERIODIC_TIMESCALE=1000000
+DERIVATION_INSTANCE_BASE_URL=https://www.theworldavatar.com/kg/derivation/
+SPARQL_QUERY_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
+SPARQL_UPDATE_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
+
+
+For details, please see:
+https://github.com/cambridge-cares/TheWorldAvatar/tree/main/JPS_BASE_LIB/python_derivation_agent
+https://github.com/cambridge-cares/TheWorldAvatar/blob/main/JPS_BASE_LIB/python_derivation_agent/pyderivationagent/agent/derivation_agent.py
