dev-AverageSquareMetrePriceAgent: First working derivation example

--- a/Agents/AverageSquareMetrePriceAgent/agent.env.example
+++ b/Agents/AverageSquareMetrePriceAgent/agent.env.example
@@ -5,6 +5,11 @@ DERIVATION_PERIODIC_TIMESCALE=1000000
 DERIVATION_INSTANCE_BASE_URL=https://www.theworldavatar.com/kg/derivation/
 SPARQL_QUERY_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
 SPARQL_UPDATE_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
+KG_USERNAME=''
+KG_PASSWORD=''
+FILE_SERVER_ENDPOINT=''
+FILE_SERVER_USERNAME=''
+FILE_SERVER_PASSWORD=''
 
 
 For details, please see:
