dev-AverageSquareMetrePriceAgent: First "working" Dockerized Debug version of agent outside the stack (working connections to Blazegraph and Postgis not included, just deployment of agent in focus as stack deployment shall follow next); Deployment of agent via "docker compose up" using .env file works, however, .envs are not supported for stack deploy

--- a/Agents/AverageSquareMetrePriceAgent/avgsqmpriceagent.env.example
+++ b/Agents/AverageSquareMetrePriceAgent/avgsqmpriceagent.env.example
@@ -3,8 +3,10 @@ ONTOAGENT_OPERATION_HTTP_URL=http://localhost:7000/AvgSqmPrice
 REGISTER_AGENT=false
 DERIVATION_PERIODIC_TIMESCALE=1000000
 DERIVATION_INSTANCE_BASE_URL=https://www.theworldavatar.com/kg/derivation/
-SPARQL_QUERY_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
-SPARQL_UPDATE_ENDPOINT=http://165.232.172.16:3838/blazegraph/namespace/buildings2/sparql
+# Required inputs, although values retrieved from Stack clients actually used when initialising DerivationAgent
+SPARQL_QUERY_ENDPOINT=''
+SPARQL_UPDATE_ENDPOINT=''
+# Required inputs, although not used when initialising DerivationAgent
 KG_USERNAME=''
 KG_PASSWORD=''
 FILE_SERVER_ENDPOINT=''
