--- a/Deploy/stacks/psdt/vis-cesium/settings.json
+++ b/Deploy/stacks/psdt/vis-cesium/settings.json
@@ -13,5 +13,9 @@
 	"Satellit (unbeschriftet)": "https://api.mapbox.com/styles/v1/mapbox/satellite-v9/tiles/256/{z}/{x}/{y}?access_token=",
 	"Satellit (beschriftet)": "https://api.mapbox.com/styles/v1/mapbox/satellite-streets-v11/tiles/256/{z}/{x}/{y}?access_token=",
 	"default": "Dunkel"
+    },
+    "terrain": {
+        "url": "https://api.maptiler.com/tiles/terrain-quantized-mesh-v2/?key=TRuPEmfpRFg51wlyVA8c",
+        "requestVertexNormals": true
     }
 }
