--- a/Deploy/stacks/psdt/vis-cesium/settings.json
+++ b/Deploy/stacks/psdt/vis-cesium/settings.json
@@ -17,5 +17,6 @@
     "terrain": {
         "url": "https://api.maptiler.com/tiles/terrain-quantized-mesh-v2/?key=TRuPEmfpRFg51wlyVA8c",
         "requestVertexNormals": true
-    }
+    },
+    "attribution": "Landesamt für Vermessung und Geobasisinformation, Rheinland-Pfalz<br/>Ministerium für Klimaschutz, Umwelt, Energie und Mobilität, Rheinland-Pfalz<br/>CMPG Innovations, Pirmasens<br/>OpenStreetMap contributors"
 }
