--- a/JPS_VIRTUALSENSOR/AermodAgent/pom.xml
+++ b/JPS_VIRTUALSENSOR/AermodAgent/pom.xml
@@ -107,6 +107,13 @@
             <version>3.4.3</version>
         </dependency>
 
+        <!-- parse wkt literals from ontop -->
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-geosparql</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+
 		<!-- Logging, versions pulled from parent -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
