dev-virtual-sensor-update: change derivation type to time series

--- a/JPS_VIRTUALSENSOR/DispersionInitialiser/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/DispersionInitialiser/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - AERMOD_AGENT_IRI=http://theworldavatar.com/kb/AermodAgent 
       - AERMOD_AGENT_URL=http://aermod-agent:8080/AermodAgent/
       - WEATHER_AGENT_URL=http://weatheragent:8080/WeatherAgent/CreateStation
+      - SHIP_INPUT_AGENT=http://ship-input-agent:8080/ShipInputAgent/update
     configs:
       - postgis
       - blazegraph
