--- a/Agents/AverageSquareMetrePriceAgent/docker-compose.yml
+++ b/Agents/AverageSquareMetrePriceAgent/docker-compose.yml
@@ -16,9 +16,9 @@ services:
       - ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__KL_AvgSqmPrice/Service
       # Host and port of ONTOAGENT_OPERATION_HTTP_URL should match port specified in `port` node below
       - ONTOAGENT_OPERATION_HTTP_URL=http://localhost:5010/AvgSqmPrice
-      - REGISTER_AGENT=false
-      - DERIVATION_PERIODIC_TIMESCALE=604800
       - DERIVATION_INSTANCE_BASE_URL=https://www.theworldavatar.com/kg/derivation/
+      - DERIVATION_PERIODIC_TIMESCALE=604800
+      - REGISTER_AGENT=true
       # Required inputs, although values retrieved from Stack clients actually used when initialising DerivationAgent
       - SPARQL_QUERY_ENDPOINT=''
       - SPARQL_UPDATE_ENDPOINT=''
