--- a/JPS_VIRTUALSENSOR/DispersionInteractor/pom.xml
+++ b/JPS_VIRTUALSENSOR/DispersionInteractor/pom.xml
@@ -5,7 +5,7 @@
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.cmclinnovations</groupId>
-    <artifactId>DispersionInitialiser</artifactId>
+    <artifactId>DispersionInteractor</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>war</packaging>
     
