--- a/JPS_VIRTUALSENSOR/DispersionInteractor/docker-compose-stack.yml
+++ b/JPS_VIRTUALSENSOR/DispersionInteractor/docker-compose-stack.yml
@@ -1,6 +1,6 @@
 version: '3.8'
 services:
-  dispersion-initialiser:
+  dispersion-interactor:
     deploy:
       mode: replicated
       replicas: 1
