main: Update gitignore

--- a/Deploy/stacks/KingsLynn/.gitignore
+++ b/Deploy/stacks/KingsLynn/.gitignore
@@ -38,9 +38,9 @@ __pycache__/
 *.pkl
 *.egg-info/
 .venv
-venv/
+*venv/
 .env
-env/
+*env/
 
 # JavaScript:
 node_modules/
@@ -58,9 +58,9 @@ dist/
 Thumbs.db
 
 # Directories
-*/outputs/*
+**/outputs/*
 !.gitkeep
-*/inputs/*
+**/inputs/*
 !.gitkeep
-*/secrets/*
+**/secrets/*
 !.gitkeep
