--- a/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - LAST_READ_FILE=/misc/last_read_file
       - TIME_OFFSET_FILE=/misc/time_offset_file
       - GEOSERVER_WORKSPACE=dispersion
-      - EMISSIONS_AGENT_URL=http://host.docker.internal:8083/EmissionsAgent/
+      - EMISSIONS_AGENT_URL=http://emissions-agent:8080/EmissionsAgent/
       - EMISSIONS_AGENT_IRI=http://theworldavatar.com/dispersion/EmissionsAgent
       - PYTHON_SERVICE_URL=http://${STACK_NAME}_python-service:5000
     configs:
