dev-dtvf-3.3.0: Now builds and applies filter objects based in input search terms.

--- a/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
@@ -5,8 +5,21 @@
         "bearing": 0,
         "pitch": 45
     },
-    "search": {
-        "Name": "name",
-        "ID": "id"
-    }
+    "search": [
+        {
+            "description": "Name",
+            "property": "name",
+            "type": "string"
+        },
+        {
+            "description": "Year Founded",
+            "property": "founded",
+            "type": "number"
+        },
+        {
+            "description": "Undergraduates Admitted?",
+            "property": "undergraduates",
+            "type": "boolean"
+        }  
+    ]
 }
