--- a/JPS_VIRTUALSENSOR/DispersionInteractor/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/DispersionInteractor/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - STACK_NAME=${STACK_NAME}
       - DATABASE=postgres # currently ontop reads from the default database
       - SCOPE_TABLE_NAME=scopes
-      - AERMOD_AGENT_IRI=http://theworldavatar.com/kb/AermodAgent 
+      - AERMOD_AGENT_IRI=http://theworldavatar.com/kg/dispersion/AermodAgent 
       - AERMOD_AGENT_URL=http://aermod-agent:8080/AermodAgent/
       - WEATHER_AGENT_URL=http://weatheragent:8080/WeatherAgent/CreateStation
       - SHIP_INPUT_AGENT=http://ship-input-agent:8080/ShipInputAgent/update
