--- a/Agents/Ifc2OntoBIMAgent/Ifc2OntoBIM/pom.xml
+++ b/Agents/Ifc2OntoBIMAgent/Ifc2OntoBIM/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>uk.ac.cam.cares.jps</groupId>
-    <artifactId>ifc2ontobim</artifactId>
+    <artifactId>ifc2ontobim-agent</artifactId>
     <version>1.0.0</version>
     <packaging>war</packaging>
 
