--- a/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
+++ b/web/digital-twin-vis-framework/example-mapbox-vis/settings.json
@@ -21,5 +21,6 @@
             "property": "undergraduates",
             "type": "boolean"
         }  
-    ]
+    ],
+    "attribution": "<div style='padding: 10px; text-align: left;'>This is an example of a some custom HTML content that can be added to the 'Attributions' node in the bottom-left corner of the map.<br><br>If this property was not defined within the settings file, then this component would not appear on the map.</div>"
 }
