--- a/Agents/HistoricalHouse45UtilitiesAgent/Dockerfile
+++ b/Agents/HistoricalHouse45UtilitiesAgent/Dockerfile
@@ -3,7 +3,9 @@
 FROM maven:3.8.6-eclipse-temurin-11-focal as builder
 
 # Copy all files into root's home, including the source, pom file, ./m2 directory, credentials and config files
-ADD . /root
+ADD /HistoricalHouse45UtilitiesAgent /root/HistoricalHouse45UtilitiesAgent
+ADD /credentials /root/credentials
+ADD /.m2 /root/.m2
 
 # Populate settings templates with credentials, repo name
 WORKDIR /root/.m2
@@ -13,8 +15,7 @@ RUN sed -i "s|REPO_USERNAME|$(cat ../credentials/repo_username.txt)|;s|REPO_PASS
 
 # Build
 WORKDIR /root/HistoricalHouse45UtilitiesAgent
-RUN --mount=type=cache,target=/root/.m2/repository mvn package
-
+RUN --mount=type=cache,target=/root/.m2/repository mvn clean package
 
 #==================================================================================================
 
@@ -22,15 +23,12 @@ RUN --mount=type=cache,target=/root/.m2/repository mvn package
 #==================================================================================================
 FROM tomcat:9.0 as agent
 
-WORKDIR /app
-
 # Copies all files in config directory to destination
 COPY ./config/. /root/
 
 # Set the required environment variables
 ENV TIMESERIES_CLIENTPROPERTIES="/root/client.properties"
 ENV EXCELPROPERTIES="/root/excel.properties"
-ENV EXCELFILEPATH="/root/data.xlsx"
 
 COPY --from=builder /root/HistoricalHouse45UtilitiesAgent/output/historical-house45-utilities-agent##1.0.0.war $CATALINA_HOME/webapps/
 
