dev-AverageSquareMetrePriceAgent: Add namespace to Docker compose environment variables

--- a/Agents/AverageSquareMetrePriceAgent/docker-compose.yml
+++ b/Agents/AverageSquareMetrePriceAgent/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - STACK_NAME=${STACK_NAME}
       # Specify PostGIS/PostgreSQL database name
       - DATABASE=postgres
+      # Specify Blazegraph namespace
+      - NAMESPACE=buildings
       #--- Agent parameters ---#
       # Minimum number of sales transactions required to assess average price
       - THRESHOLD=5
