--- a/JPS_BASE_LIB/pom.xml
+++ b/JPS_BASE_LIB/pom.xml
@@ -45,7 +45,7 @@
                 <configuration>
                     <source>1.8</source>
                     <target>1.8</target>
- <!--                    <release>8</release> --> 
+                    <release>8</release>
                 </configuration>
             </plugin>
 
@@ -455,15 +455,6 @@
             <artifactId>jersey-common</artifactId>
             <version>2.36</version>
         </dependency>
-
-        <!-- Required to create mock objects for junit tests of functions that take java.sql.ResultSet type objects as input parameters -->
-        <dependency>
-            <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>2.0.2-beta</version>
-            <scope>test</scope>
-        </dependency>
-
     </dependencies>
 
 
