dev-psdt: Added CORS headers to nginx feature info agent routing configuration.

--- a/Deploy/stacks/psdt/feature-info-agent-files/psdt-feature-info-agent.conf
+++ b/Deploy/stacks/psdt/feature-info-agent-files/psdt-feature-info-agent.conf
@@ -2,6 +2,7 @@ location = /feature-info-agent {
   return 308 $scheme://$http_host$uri/;
 }
 location /feature-info-agent/ {
+  add_header 'Access-Control-Allow-Origin' '*' always;
   # Proxy settings and their defaults are discussed here
   # https://nginx.org/en/docs/http/ngx_http_proxy_module.html
   # Redirect to upstream (internal) server
