--- a/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
+++ b/JPS_VIRTUALSENSOR/ShipInputAgent/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       - EMISSIONS_AGENT_URL=http://emissions-agent:8080/EmissionsAgent/
       - EMISSIONS_AGENT_IRI=http://theworldavatar.com/kg/dispersion/EmissionsAgent
       - PYTHON_SERVICE_URL=http://${STACK_NAME}_python-service:5000
+      - PARALLELISE_CALCULATIONS=false
     configs:
       - postgis
       - blazegraph
