--- a/Agents/HistoricalHouse45UtilitiesAgent/HistoricalHouse45UtilitiesAgent/pom.xml
+++ b/Agents/HistoricalHouse45UtilitiesAgent/HistoricalHouse45UtilitiesAgent/pom.xml
@@ -96,6 +96,27 @@
             <version>20180813</version>
             <type>jar</type>
         </dependency>
+        <!--  For SPARQL operations  -->
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-core</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-arq</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-querybuilder</artifactId>
+            <version>4.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-rdfconnection</artifactId>
+            <version>4.6.1</version>
+        </dependency>
         <!--  For sending HTTP request to the API  -->
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
