1417-dev-rdbstorerouter: changed jps-base-lib version to latest snapshot version

--- a/JPS_ACCESS_AGENT/access-agent-code/pom.xml
+++ b/JPS_ACCESS_AGENT/access-agent-code/pom.xml
@@ -89,7 +89,7 @@
   	<dependency>
     	<groupId>uk.ac.cam.cares.jps</groupId>
     	<artifactId>jps-base-lib</artifactId>
-    	<version>1.21.0</version>
+    	<version>1.28.0-RDBAccessAgent-snapshot-1</version>
     </dependency>
    
     <!-- Java servlet API -->
