dev-virtual-sensor-update: updates to PythonService to postprocess AERMOD output files

--- a/JPS_VIRTUALSENSOR/PythonService/Dockerfile
+++ b/JPS_VIRTUALSENSOR/PythonService/Dockerfile
@@ -21,6 +21,7 @@ RUN python -m pip install -r requirements.txt
 
 COPY ./episode /app/episode/
 COPY ./speedLoadMap /app/speedLoadMap
+COPY ./aermod /app/aermod
 COPY ./app_entry_point.sh /app/.
 COPY ./app.py /app/.
 
