--- a/JPS_VIRTUALSENSOR/PythonService/docker-compose-debug.yml
+++ b/JPS_VIRTUALSENSOR/PythonService/docker-compose-debug.yml
@@ -1,7 +1,9 @@
 version: '3.8'
 services:
   python-service:
+    image: docker.cmclinnovations.com/python-service-debug:1.0.0-SNAPSHOT
     build:
+      context: .
       target: debug
     ports:
-      - 5678:5678
+      - "${DEBUG_PORT}:5678"
