dev-virtual-sensor-update: use prod-profile to build to reduce amount of logging

--- a/JPS_VIRTUALSENSOR/AermodAgent/Dockerfile
+++ b/JPS_VIRTUALSENSOR/AermodAgent/Dockerfile
@@ -34,7 +34,7 @@ COPY pom.xml ./
 COPY src ./src/
 COPY WEB-INF ./WEB-INF/
 
-RUN mvn package -DskipTests -U
+RUN mvn package -DskipTests -U -P prod-profile
 
 #==================================================================================================
 # Build aermod components
